# UBID-Platform

./: .gitignore  DEMO_SCRIPT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/: api.py  dashboard.py  portal.py
apps/ubid-dashboard/: package-lock.json  package.json
apps/ubid-dashboard/src/: App.jsx  data.js
artifacts/: activity_classification.csv  link_decisions.csv  linked_records.csv  reviewer_queue.csv  synthetic_source.csv
scripts/: apply_merge.py  run_pipeline.py  start_all.py  stream_event.py
src/ubid/: __init__.py  config.py
src/ubid/classification/: __init__.py  pipeline.py
src/ubid/data/: __init__.py  synthetic_generator.py
src/ubid/linking/: __init__.py  pipeline.py
src/ubid/models/: schemas.py
src/ubid/reviewer/: __init__.py  queue.py
src/ubid/storage/: __init__.py  repository.py
src/ubid_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py
ubid-dashboard/: README.md  index.html
ubid-dashboard/src/: App.jsx  data.js  index.css
