[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubid-platform"
version = "0.1.0"
description = "AI-powered cross-department business identity resolution and activity classification prototype for Karnataka."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "streamlit",
    "rapidfuzz",
    "jellyfish",
    "networkx",
    "scikit-learn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]
matching = ["splink"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
